--- a/src/theme/chat/_forum.scss
+++ b/src/theme/chat/_forum.scss
@@ -13,7 +13,7 @@
   }
 
   /* Target the textarea input */
-  div[aria-label="Create Post"] .textArea__7aff3 {
+  div[aria-label="Create Post"] .textArea__89a34 {
     padding: 8px 12px !important;
     border-radius: 6px !important;
     height: 40px;
