--- a/src/theme/chat/_message.scss
+++ b/src/theme/chat/_message.scss
@@ -177,7 +177,7 @@
 	}
 
 	// Message placeholders
-	.wrapper__0d1ef {
+	.wrapper_cdf8a9 {
 		background: transparent;
 	}
 	// Pretty much the same as #L3
