--- a/src/theme/guilds/_container.scss
+++ b/src/theme/guilds/_container.scss
@@ -1,4 +1,4 @@
-#app-mount .guilds_c48ade {
+#app-mount .guilds__5e434 {
 	background: var(--background-dark);
 	.footer__214dc {
 		--background-tertiary: var(--background-dark);
