--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -1,8 +1,8 @@
 #app-mount {
-	.expandedFolderBackground__48112 {
+	.folderGroupBackground__48112 {
 		background: var(--background-light);
 	}
-	.folder__48112 {
+	.hiddenVisually_b18fe2 {
 		background: var(--background-light);
 	}
 }
