--- a/src/theme/modals/_deletemessage.scss
+++ b/src/theme/modals/_deletemessage.scss
@@ -1,4 +1,4 @@
-#app-mount .message__89466 {
+#app-mount .message_fd14e0 {
 	background: var(--background-alt);
 	box-shadow: none;
 	.cozy_c19a55 {
