--- a/src/theme/modals/_uploadfile.scss
+++ b/src/theme/modals/_uploadfile.scss
@@ -1,8 +1,8 @@
-#app-mount .uploadModal_dbca3c {
+#app-mount .uploadModal_b78547 {
 	background: var(--background);
 	border-radius: var(--border-radius);
 	box-shadow: var(--box-shadow);
-	.footer_dbca3c {
+	.footer_b78547 {
 		background: var(--background-alt);
 		box-shadow: none;
 	}
