--- a/src/theme/sidebar/_container.scss
+++ b/src/theme/sidebar/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
 	.container__2637a,
-	.sidebar_c48ade,
-	.sidebar_c48ade:after {
+	.sidebar__5e434,
+	.sidebar__5e434:after {
 		background: var(--background);
 	}
 }
