--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -1,5 +1,5 @@
 #app-mount {
-	.privateChannels__35e86 {
+	.privateChannels_e6b769 {
 		background: transparent;
 		.scroller__99e7c {
 			background: transparent;
