--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -1,12 +1,12 @@
 #app-mount {
-	.panels_c48ade {
+	.panels__5e434 {
 		background: var(--background);
 	}
-	.activityPanel_c48ade .container__37e49 {
+	.activityPanel__5e434 .container__37e49 {
 		background: transparent;
 	}
 	.container__37e49,
-	.activityPanel_c48ade {
+	.activityPanel__5e434 {
 		background: transparent;
 		border: none;
 	}
