--- a/src/theme/sidebar/_unreadbar.scss
+++ b/src/theme/sidebar/_unreadbar.scss
@@ -1,4 +1,4 @@
-#app-mount .sidebar_c48ade .bar__3b95d {
+#app-mount .sidebar__5e434 .bar__3b95d {
 	border-radius: var(--border-radius);
 	background: var(--background-light);
 	box-shadow: var(--box-shadow);
