--- a/src/theme/inputs/_checkbox.scss
+++ b/src/theme/inputs/_checkbox.scss
@@ -1,11 +1,11 @@
 #app-mount {
-	.container__87bf1 {
+	.container__3f21e {
 		transition: 0.15s ease background-color;
 		background: var(--background-dark) !important;
-		&.checked__87bf1 {
+		&.checked__3f21e {
 			background: rgb(var(--accent)) !important;
 		}
-		&:not([style*='rgb(128'], .checked__87bf1) {
+		&:not([style*='rgb(128'], .checked__3f21e) {
 			background: rgb(var(--accent), 0.5) !important;
 		}
 	}
@@ -13,7 +13,7 @@
 	// Checkbox row
 	.control__0d850.row-31nALW {
 		background: var(--background-light);
-		&.checked-1pZh2h .slider__87bf1 {
+		&.checked-1pZh2h .slider__3f21e {
 			background: rgb(var(--accent), 1) !important;
 			border-color: rgb(var(--accent), 1) !important;
 		}
