--- a/src/theme/sidebar/_channel.scss
+++ b/src/theme/sidebar/_channel.scss
@@ -50,4 +50,9 @@
 			inset 0 0 0 2px rgb(var(--accent), 1),
 			inset 0 0 0 3px var(--background);
 	}
+
+	.sidebarList__5e434 {
+		border: none;
+	}
+
 }
