--- a/src/theme/app/_toolbar.scss
+++ b/src/theme/app/_toolbar.scss
@@ -2,6 +2,7 @@
 	.title-3qD0b-,
 	.container__9293f {
 		background: var(--background);
+		border: none;
 	}
 	.children__9293f:after {
 		content: none;
