Remove Borders PT2

--- a/src/theme/pages/_friends.scss
+++ b/src/theme/pages/_friends.scss
@@ -2,6 +2,7 @@
     // Seems to "only" control the color of the little line above the "Online" "All" "Friends" Button row
 	.container__133bf {
 		background: var(--background);
+		border: none;
 	}
 
     // Search bar
