--- a/src/theme/sidebar/_header.scss
+++ b/src/theme/sidebar/_header.scss
@@ -12,6 +12,7 @@
 
 	.searchBar_e6b769 {
 		box-shadow: none;
+		border: none;
 	}
 	.searchBarComponent__35e86 {
 		background: var(--background-dark);
