--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -10,4 +10,14 @@
 		background: transparent;
 		border: none;
 	}
+
+	.scroller__7d20c {
+		border: none;
+	}
+
+	/* Quest-Box in the activity thing at the right of your friendslist */
+	.wrapper__11054 {
+		background: var(--background-light);
+	}
+
 }
