--- a/src/theme/pages/_nitro.scss
+++ b/src/theme/pages/_nitro.scss
@@ -2,10 +2,7 @@
 	.scroller__244e5 {
 		background: var(--background);
 	}
-	.detailsBlock-FoDTGA {
-		background: var(--background-alt);
-	}
-	.feature-2IUcBI {
+	.detailsBlock-FoDTGA, .feature-2IUcBI {
 		background: var(--background-alt);
 	}
 }
