--- a/src/theme/pages/_serverboost.scss
+++ b/src/theme/pages/_serverboost.scss
@@ -2,17 +2,10 @@
 	.perksModal-fSYqOq {
 		background: var(--background);
 	}
-	.ctaBar-2UsjF2 {
-		background: var(--background-alt);
-	}
-
-	.tierBody-16Chc9 {
+	.tierBody-16Chc9, .perk-2WeBWW, .ctaBar-2UsjF2   {
 		background: var(--background-alt);
 	}
 	.tierHeaderLocked-1s2JJz {
 		background: var(--background-light-alt);
-	}
-	.perk-2WeBWW {
-		background: var(--background-alt);
 	}
 }
