--- a/src/theme/sidebar/_dms.scss
+++ b/src/theme/sidebar/_dms.scss
@@ -37,7 +37,7 @@
   	}
 
 	// profile poput
-  	.tabListScroller__37bfc { /* remove wonky bar in big profile popout when hovering over the tabs on the right */
+  	.tabListScroller__37bfc {
   		overflow: visible!important;
   	}
 
