--- a/src/theme/chat/_forum.scss
+++ b/src/theme/chat/_forum.scss
@@ -1,10 +1,10 @@
 #app-mount {
-  .container_f369db {
+  .container_f369db, .iconWrapper__7e6bb, .container_ca49a1 {
 	  background: var(--background);
   }
   
-  /* Header */
-  .header_f369db {
+  // Header
+  .header_f369db, .matchingPostsRow_f369db, .container__9a337, .container_faa96b {
 	  background: var(--background-alt);
   }
 	.titleContainer_d9be46 {
@@ -12,7 +12,7 @@
 	  gap: 12px;
   }
 
-  /* Target the textarea input */
+  // Target the textarea input
   div[aria-label="Create Post"] .textArea__89a34 {
     padding: 8px 12px !important;
     border-radius: 6px !important;
@@ -30,7 +30,7 @@
         margin-top: 2px;
       }
 
-  .forumPostFormButton_d9be46 {
+  .forumPostFormButton_d9be46, .defaultColor__4bd52 {
     color: var(--interactive-normal);
   }
 
@@ -38,32 +38,9 @@
     	background-color: var(--background-light);
   }
 	
-  .matchingPostsRow_f369db {
-	background: var(--background-alt);
-  }
-
-  /* Guidelines */
-  .container_ca49a1 {
-    background: var(--background);
-  }
-
-  .defaultColor__4bd52 {
-    color: var(--interactive-normal);
-  }
-
-  /* Tags */
+  // Tags
   .pill_a2c9e8, .sortDropdown_f369db, .tagsButton_f369db {
     color: var(--interactive-normal);
     background: var(--background-alt);
   }
-
-  /* Cards */
-  .container__9a337, .container_faa96b  {
-	background: var(--background-alt);
-  }
-
-  /* Message-Bubble-Icon above Title in Chat */
-  .iconWrapper__7e6bb{
-    background: var(--background);
-  }  
 }
