--- a/src/theme/guilds/_folder.scss
+++ b/src/theme/guilds/_folder.scss
@@ -1,8 +1,5 @@
 #app-mount {
-	.folderGroupBackground__48112 {
-		background: var(--background-light);
-	}
-	.hiddenVisually_b18fe2 {
+	.folderGroupBackground__48112, .hiddenVisually_b18fe2 {
 		background: var(--background-light);
 	}
 }
