--- a/src/theme/popouts/_inbox.scss
+++ b/src/theme/popouts/_inbox.scss
@@ -12,39 +12,39 @@
 		border: none;
 	}
 
-	.messagesScroller__4ad69 { /* bookmarks scroller background */
+	.messagesScroller__4ad69 {
 	    background: var(--background-light);
 	}
 
-	.messageContainer__4ad69 { /* bookmarked messages */
+	.messageContainer__4ad69 {
 		background: var(--background-alt);
   	    border: none;
 	}
 
-	.message__4ad69 { /* bookmarked message bottom half */
+	.message__4ad69 {
 		margin-top: 10px!important;
 	}
 
-	.channelHeader__35a7e { /* mentioned messages header */
+	.channelHeader__35a7e {
   		border-radius: 6px;
   		margin-left: 15px;
 	}
 
-	.scroller__2692d { /* unreads scroller background */
+	.scroller__2692d {
   		background: var(--background-light);
 	}
 
-	.messages__1ccd1 { /* unreads messages content box */
+	.messages__1ccd1 {
   		background: var(--background-alt);
   		border: none;
 	}
 
-	.channel__427f0 .channelHeader__35a7e { /* unreads header */
+	.channel__427f0 .channelHeader__35a7e {
   		margin-left: unset;
     	position: unset;
 	}
 
-	.container__0f711 { /* "For You" tab */
+	.container__0f711 {
     	background: var(--background-light);
     	padding-left: 15px;
 	}
