--- a/src/theme/sidebar/_panels.scss
+++ b/src/theme/sidebar/_panels.scss
@@ -15,7 +15,7 @@
 		border: none;
 	}
 
-	/* Quest-Box in the activity thing at the right of your friendslist */
+	// Quest-Box in the activity feed
 	.wrapper__11054 {
 		background: var(--background-light);
 	}
