New Settings Modal rewrite

--- a/src/theme/settings/user/_index.scss
+++ b/src/theme/settings/user/_index.scss
@@ -1,5 +1,5 @@
-@forward './myaccount';
-@forward './authapps';
-@forward './connections';
-@forward './voicevideo';
-@forward './billing';
+@forward './account';
+@forward './connects';
+@forward './family';
+@forward './main';
+@forward './social';
